# QML-CMake-CPP-Template

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/CustomizableTheme/: CMakeLists.txt  CustomizableTheme.cpp  CustomizableTheme.qml  CustomizableTheme.qrc  SettingsPage.qml  readme.md
apps/LiveReload/: CMakeLists.txt  FileWatcher.cpp  FileWatcher.hpp  LiveReload.cpp  LiveReload.qml  LiveReload.qrc  LiveReloadEngine.cpp  LiveReloadEngine.hpp  ReloadingWindow.qml
apps/Showcase/: CMakeLists.txt  Showcase.cpp  Showcase.qml  Showcase.qrc
apps/Showcase/Modern/: ModernStyle.cpp  qmldir
libs/: CMakeLists.txt
libs/ModernStyle/: CMakeLists.txt  ModernStyle.qrc
libs/ModernStyle/Modern/: ApplicationWindow.qml  Button.qml  ModernStyle.cpp  ModernStyle.hpp  ModernStyleSingleton.qml  Page.qml  qmldir
libs/Ui/: CMakeLists.txt  ExampleWidget.qml  Ui.qrc
