# Instruct CMake to run moc automatically when needed
set(CMAKE_AUTOMOC ON)
# Automagically manage the resources
set(CMAKE_AUTORCC ON)

# HEADERS
set(CUSTOMIZABLE_THEME_HEADERS
    Modern/ModernStyle.hpp
)

# SOURCES
set(CUSTOMIZABLE_THEME_SOURCES
    Modern/ModernStyle.cpp
    CustomizableTheme.cpp
)

# LINKS
set(CUSTOMIZABLE_THEME_LINKS
    Qt5::Core
    Qt5::Qml
    Qt5::Quick
    Qt5::QuickControls2
)

# RESOURCES
set(CUSTOMIZABLE_THEME_RESOURCES
    CustomizableTheme.qrc
)

# TEMPORARY variable to fill QML_IMPORT_PATH
set(INTERNAL_QML_IMPORT_PATH ${INTERNAL_QML_IMPORT_PATH}
    "${CMAKE_CURRENT_SOURCE_DIR}"
    CACHE
    INTERNAL "INTERNAL_QML_IMPORT_PATH"
)

add_executable(CUSTOMIZABLE_THEME ${CUSTOMIZABLE_THEME_SOURCES} ${CUSTOMIZABLE_THEME_HEADERS} ${CUSTOMIZABLE_THEME_RESOURCES})
target_link_libraries(CUSTOMIZABLE_THEME PRIVATE ${CUSTOMIZABLE_THEME_LINKS})
target_include_directories(CUSTOMIZABLE_THEME PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
